cmake_minimum_required(VERSION 3.7)
project(src)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Drawing/AbsThreshold.h
        Drawing/BaseAnalyzer.h
        Drawing/ColorUtils.cpp
        Drawing/ColorUtils.h
        Drawing/DrawingFuncs.cpp
        Drawing/DrawingFuncs.h
        Drawing/GLUTMenu.cpp
        Drawing/GLUTMenu.h
        Drawing/Graph.cpp
        Drawing/Graph.h
        Drawing/GraphManager.cpp
        Drawing/GraphManager.h
        Drawing/SigmaThreshold.h
        Drawing/Visualizer_GLUT.cpp
        Drawing/Visualizer_GLUT.h
        Drawing/WindowThreshold.h
        Math/Angles.h
        Math/Constants.h
        Math/Geometry.cpp
        Math/Geometry.h
        Math/LowPassFilter.h
        Math/Mat3x3F.h
        Math/MathUtils.h
        Math/Quaternion.h
        Math/Random.cpp
        Math/Random.h
        Math/Transform3D.h
        Math/V3D.h
        Math/V3F.h
        Math/V4D.h
        MavlinkNode/MavlinkNode.cpp
        MavlinkNode/MavlinkNode.h
        MavlinkNode/MavlinkTranslation.cpp
        MavlinkNode/MavlinkTranslation.h
        MavlinkNode/PracticalSocket.cpp
        MavlinkNode/PracticalSocket.h
        MavlinkNode/UDPPacket.h
        Simulation/BaseDynamics.cpp
        Simulation/BaseDynamics.h
        Simulation/magnetometer.cpp
        Simulation/magnetometer.h
        Simulation/opticalflow.cpp
        Simulation/opticalflow.h
        Simulation/QuadDynamics.cpp
        Simulation/QuadDynamics.h
        Simulation/rangefinder.cpp
        Simulation/rangefinder.h
        Simulation/SimulatedGPS.h
        Simulation/SimulatedIMU.h
        Simulation/SimulatedMag.h
        Simulation/SimulatedQuadSensor.h
        Simulation/Simulator.cpp
        Simulation/Simulator.h
        Utility/Camera.cpp
        Utility/Camera.h
        Utility/FastDelegate.h
        Utility/FixedQueue.h
        Utility/Mutex.h
        Utility/SimpleConfig.cpp
        Utility/SimpleConfig.h
        Utility/StringUtils.h
        Utility/Timer.cpp
        Utility/Timer.h
        BaseController.cpp
        BaseController.h
        BaseQuadEstimator.cpp
        BaseQuadEstimator.h
        Common.h
        ControllerFactory.h
        DataSource.h
        main.cpp
        QuadControl.cpp
        QuadControl.h
        QuadEstimatorEKF.cpp
        QuadEstimatorEKF.h
        Trajectory.cpp
        Trajectory.h
        VehicleDatatypes.h)

add_executable(src ${SOURCE_FILES})